# ngSTLib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/common/: RingBuffer.h
libs/: googletest
src/: Button.hpp  Encoder.hpp  SysClock.hpp  SysPower.hpp  device.h  millis.hpp
src/app/: App.hpp  Timer.hpp  TimerTask.hpp
src/button/: Button.hpp  ButtonTimer.hpp  ButtonsObserver.hpp  Common.hpp  PinButton.hpp  State.hpp  TimButton.hpp
src/common/: Observer.hpp  RingBuffer.cpp  RingBuffer.hpp  StringUtils.hpp  Template.hpp  defines.h  globals.cpp  globals.hpp  template.hpp
src/driver/: D5611.hpp
src/gpio/: AccessMode.h  Pin.hpp  Port.hpp  ShiftRegister.hpp  VirtualPort.hpp  getPort.cpp  getPort.h
src/register/: Access.hpp  FieldValue.hpp  FieldsPack.hpp  Register.hpp  RegisterField.hpp  Type.hpp  getPort.cpp  getPort.h
src/segment/: SegmentDisplay.hpp  SegmentUtils.hpp
src/timer/: ICC.hpp  PWM.hpp  TimBase.hpp  TimGeneral.hpp  Timer.hpp  TimerBase.hpp  UpdateTimer.hpp  Utils.hpp
test/: Button_test.cpp  D5611_test.cpp  Encoder_test.cpp  Timer_test.cpp  millis_test.cpp
test/app/: TimerTask_test.cpp
test/button/: Button_test.cpp  PinButton_test.cpp
test/common/: RingBuffer_test.cpp  StringUtils_test.cpp
test/gpio/: Pin_test.cpp  Port_test.cpp  ShiftRegister_test.cpp  VirtualPort_test.cpp  fixture.hpp
test/register/: FieldsPack_test.cpp  RegisterField_test.cpp  Register_test.cpp
test/segment/: SegUtils_test.cpp
test/timer/: ICC_test.cpp  PWM_test.cpp  TimGeneral_test.cpp  (+5 more)
tools/: README.md  hardware_generator.py  pyproject.toml
(+23 files in other folders)
