[tool.poetry]
name = "tools"
version = "0.1.0"
description = ""
authors = ["Nick Grosu <grosunick@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cmsis-svd = "^0.4"
setuptools = "^75.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
